--- a/banktrans/src/Components/Bank.css
+++ b/banktrans/src/Components/Bank.css
@@ -1,6 +1,10 @@
+body{
+    background-color: rgb(229, 188, 188);
+}
+
 .table{
-    width:85%;
-    background-color:rgb(200, 165, 165);
+    width:100%;
+    background-color:rgb(186, 138, 138);
     height: fit-content;
 }
 
@@ -15,6 +19,65 @@
     display:inline-block;
 }
 
+.search{
+    width: 40%;
+    height:35px;
+    background: fixed;
+}
+
+/* Add a black background color to the top navigation bar */
+.topnav {
+    overflow: hidden;
+    background-color: #d2bdbd;
+  }
+  
+  /* Style the links inside the navigation bar */
+  
+  .topnav a {
+    float: right;
+    display: inline;
+    color: black;
+    text-align: center;
+    padding: 14px 16px; 
+    text-decoration: none;
+    font-size: 17px;
+  }
+
+  .topnav #logo {
+    /* display: inline-block; */
+    float: left;
+    font-size: 45px;
+    color: rgb(97, 106, 106);
+
+    }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+ .footer {
+    padding: 10px 20px;
+    background: #443a3a;
+    color: white;
+  }
+  
+  
+  /* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
+  @media screen and (max-width: 600px) {
+    .topnav a, .topnav input[type=text] {
+      float: none;
+      display: block;
+      text-align: left;
+      width: 100%;
+      margin: 0;
+      padding: 14px;
+    }
+    /* .topnav input[type=text] {
+      border: 1px solid #ccc;
+    } */
+  }
 /* input[type=text] {
     width: 100%;
     padding: 12px 20px;
